# todo-app

./: .gitignore  main.py  pyproject.toml
app/: __init__.py
app/config/: __init__.py  base.py  development.py  testing.py
app/extensions/: __init__.py  login_manager.py
app/models/: __init__.py  auth_models.py  todo_models.py
app/routes/: __init__.py
app/routes/auth/: routes.py
app/routes/todo/: __init__.py  routes.py
app/schemas/: todo.py  user.py
app/services/: __init__.py  auth_service.py  todo_service.py
app/static/css/: dashboard.css  styles.css
app/static/js/: todo.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/includes/: _delete_modal.html  _flash_alert.html  _footer.html  _navbar.html
app/templates/todo/: todo_modal.html  todos.html
routes/auth/: routes.py
routes/todo/: routes.py
schemas/: todo.py
static/js/: todo.js
templates/: base.html  index.html
templates/auth/: login.html  register.html
templates/includes/: _footer.html  _navbar.html
templates/todo/: index.html  todo_modal.html
